Fix docs search box highlighting on FireFox
Refs pombase/website#1955

--- a/src/app/documentation/docs/docs.component.css
+++ b/src/app/documentation/docs/docs.component.css
@@ -43,8 +43,11 @@
 .doc-search {
   padding: 1em 0 1em 1em;
 }
+.doc-search-highlight {
+  background-color: #bcf;
+}
 
-.doc-search-highlight, .doc-search:has(input:focus) {
+.doc-search:has(input:focus) {
   background-color: #bcf;
 }
 
